compressed dense matrix

--- a/experiments/sparsity/Makefile
+++ b/experiments/sparsity/Makefile
@@ -2,11 +2,19 @@ CXX = icpc
 CXXFLAGS = -fopenmp
 LDFLAGS = -LSpMP -lspmp -mkl
 
+ifeq (yes, $(LIBXSMM))
+  CXXFLAGS += -Ilibxsmm/include
+  LDFLAGS += -Llibxsmm/lib -lxsmm
+endif
+
 ifeq (yes, $(DBG))
   CXXFLAGS += -O0 -g
 else
-  CXXFLAGS += -O3 -DNDEBUG -xHost
+  CXXFLAGS += -O3 -DNDEBUG -xHost -DMKL_DIRECT_CALL
 endif
 
 csrmm_test: csrmm_test.cpp
 	$(CXX) $(CXXFLAGS) -o $@ $^ $(LDFLAGS)
+
+clean:
+	rm csrmm_test
