--- a/Makefile.config.Ubuntu.16.04
+++ b/Makefile.config.Ubuntu.16.04
@@ -15,10 +15,10 @@ USE_CUDNN := 1
 # uncomment to allow MDB_NOLOCK when reading LMDB files (only if necessary)
 #	You should not set this flag if you will be reading LMDBs with any
 #	possibility of simultaneous read and write
-# ALLOW_LMDB_NOLOCK := 1
+ALLOW_LMDB_NOLOCK := 1
 
 # Uncomment if you're using OpenCV 3
-OPENCV_VERSION := 3
+# OPENCV_VERSION := 3
 
 # To customize your choice of compiler, uncomment and set the following.
 # N.B. the default for Linux is g++ and the default for OSX is clang++
@@ -61,14 +61,14 @@ BLAS := atlas
 
 # NOTE: this is required only if you will compile the python interface.
 # We need to be able to find Python.h and numpy/arrayobject.h.
-#PYTHON_INCLUDE := /usr/include/python2.7 \
-#		/usr/lib/python2.7/dist-packages/numpy/core/include
+PYTHON_INCLUDE := /usr/include/python2.7 \
+		/usr/lib/python2.7/dist-packages/numpy/core/include
 # Anaconda Python distribution is quite popular. Include path:
 # Verify anaconda location, sometimes it's in root.
-ANACONDA_HOME := $(HOME)/anaconda2
-PYTHON_INCLUDE := $(ANACONDA_HOME)/include \
-		 $(ANACONDA_HOME)/include/python2.7 \
-		 $(ANACONDA_HOME)/lib/python2.7/site-packages/numpy/core/include \
+#ANACONDA_HOME := $(HOME)/anaconda2
+#PYTHON_INCLUDE := $(ANACONDA_HOME)/include \
+#		 $(ANACONDA_HOME)/include/python2.7 \
+#		 $(ANACONDA_HOME)/lib/python2.7/site-packages/numpy/core/include \
 
 # Uncomment to use Python 3 (default is Python 2)
 # PYTHON_LIBRARIES := boost_python3 python3.5m
@@ -76,8 +76,8 @@ PYTHON_INCLUDE := $(ANACONDA_HOME)/include \
 #                 /usr/lib/python3.5/dist-packages/numpy/core/include
 
 # We need to be able to find libpythonX.X.so or .dylib.
-# PYTHON_LIB := /usr/lib
-PYTHON_LIB := $(ANACONDA_HOME)/lib
+PYTHON_LIB := /usr/lib
+# PYTHON_LIB := $(ANACONDA_HOME)/lib
 
 # Homebrew installs numpy in a non standard path (keg only)
 # PYTHON_INCLUDE += $(dir $(shell python -c 'import numpy.core; print(numpy.core.__file__)'))/include
@@ -87,12 +87,14 @@ PYTHON_LIB := $(ANACONDA_HOME)/lib
 # WITH_PYTHON_LAYER := 1
 
 # Personal lib
-OPT_HOME := /home/wew57/opt/
+# OPT_HOME := /home/wew57/opt/
 
 # Whatever else you find you need goes here.
-INCLUDE_DIRS := $(OPT_HOME)/include $(PYTHON_INCLUDE) /usr/local/include /usr/include/hdf5/serial
-LIBRARY_DIRS := $(OPT_HOME)/lib $(OPT_HOME)/lib64 $(PYTHON_LIB) /usr/local/lib /usr/lib /usr/lib/x86_64-linux-gnu /usr/lib/x86_64-linux-gnu/hdf5/serial
+#INCLUDE_DIRS := $(OPT_HOME)/include $(PYTHON_INCLUDE) /usr/local/include /usr/include/hdf5/serial
+#LIBRARY_DIRS := $(OPT_HOME)/lib $(OPT_HOME)/lib64 $(PYTHON_LIB) /usr/local/lib /usr/lib /usr/lib/x86_64-linux-gnu /usr/lib/x86_64-linux-gnu/hdf5/serial
 
+INCLUDE_DIRS := $(PYTHON_INCLUDE) /usr/local/include /usr/include/hdf5/serial
+LIBRARY_DIRS := $(PYTHON_LIB) /usr/local/lib /usr/lib /usr/lib/x86_64-linux-gnu /usr/lib/x86_64-linux-gnu/hdf5/serial
 # If Homebrew is installed at a non standard location (for example your home directory) and you use it for general dependencies
 # INCLUDE_DIRS += $(shell brew --prefix)/include
 # LIBRARY_DIRS += $(shell brew --prefix)/lib
